--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
+  "homepage": "https://<seu-usuario>.github.io/javascript-arcade-funhouse",
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
